# hogumeter

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  Caddyfile  README.md  SECURITY.md  docker-compose.yml
.claude/: settings.json
collector/: Dockerfile  README.md  pyproject.toml
collector/src/collector/: __init__.py  __main__.py  observability.py
collector/src/collector/db/: __init__.py  alias_source.py  raw_deal_sink.py  site_poll_state_sink.py  used_listing_sink.py  used_search_source.py
collector/src/collector/parsers/: __init__.py  bunjang.py  fmkorea.py  models.py  ppomppu.py  ruliweb.py
collector/src/collector/pipeline/: __init__.py  detail_fetch.py  ingest.py  price.py  timestamps.py
collector/src/collector/scheduler/: __init__.py  drift.py  fetcher.py  loop.py  market.py  policy.py  sites.py
collector/src/collector/tools/: __init__.py  robots_report.py
collector/tests/: boards.py  conftest.py  test_alias_source.py  test_detail_fetch.py  test_drift.py  test_end_to_end_ingest.py  test_fetcher.py  test_fixture_bytes.py  test_ingest.py  test_main.py  test_market.py  test_market_polling.py  test_observability.py  test_parsers.py  test_pipeline_smoke.py  test_price.py  test_privacy.py  test_raw_deal_sink.py  test_robots_report.py  test_scheduler.py  test_schema_fixture.py  test_site_poll_state_sink.py  test_smoke.py  test_timestamps.py  test_used_listing_sink.py
collector/tests/fixtures/bunjang/: find_v2_iphone.json
collector/tests/fixtures/fmkorea/: list_normal.html
collector/tests/fixtures/ppomppu/: list_normal.html
(+583 files in other folders)
