[project]
name = "collector"
version = "0.1.0"
description = "호구미터 수집기 — 핫딜 3사(뽐뿌/루리웹/펨코) + 번개장터 폴링"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
